# Sketchify

./: .gitignore  Cargo.toml  README.MD  README.md  image.js  index.html  index.node  lib.rs  main.js  package-lock.json  package.json  pnpm-lock.yaml  renderer.js  renderer2.js
css/: index.css  styles.css
src/: lib.rs
