[package]
name = "sketchify-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "sketchify_native"
crate-type = ["cdylib"]

[dependencies]
# Fixes the 'unresolved import image' errors
image = "0.24" 
# Modern Neon with N-API
neon = { version = "1.0", default-features = false, features = ["napi-6"] }
